@@ -7,7 +7,9 @@ import static org.mockito.Mockito.when;
 
 import com.scaling.libraryservice.commons.api.apiConnection.LoanableLibConn;
 import com.scaling.libraryservice.commons.api.apiConnection.generator.ConnectionGenerator;
+import com.scaling.libraryservice.commons.api.apiConnection.generator.LoanableLibConnGenerator;
 import com.scaling.libraryservice.commons.api.service.provider.DataProvider;
+import com.scaling.libraryservice.commons.api.service.provider.LoanableLibProvider;
 import com.scaling.libraryservice.mapBook.dto.ApiLoanableLibDto;
 import com.scaling.libraryservice.mapBook.dto.LibraryInfoDto;
 import com.scaling.libraryservice.mapBook.dto.ReqMapBookDto;
@@ -17,6 +19,7 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -41,8 +44,7 @@ class MapBookServiceTest {
     @Mock
     private List<LoanableLibConn> loanableLibConns;
 
-    @Mock
-    private ConnectionGenerator<LoanableLibConn, LibraryInfoDto, ReqMapBookDto> connectionGenerator;
+    private ConnectionGenerator<LoanableLibConn, LibraryInfoDto, ReqMapBookDto> connectionGenerator = new LoanableLibConnGenerator();
 
     @BeforeEach
     public void setUP() {
@@ -50,17 +52,45 @@ class MapBookServiceTest {
         mapBookService = new MapBookService(dataProvider,connectionGenerator);
     }
 
+//    @Test @DisplayName("소장하지 않는 도서관에 대해선 빌릴 수 없는 상태로 결과를 반환 한다")
+//    void matchMapBooks_when_bExistConns_isEmpty() {
+//        /* given */
+//
+//        LibraryInfoDto library1 = LibraryInfoDto.builder().hasBook(false).isHasBookSupport(true).libNo(1).build();
+//        LibraryInfoDto library2 = LibraryInfoDto.builder().hasBook(true).isHasBookSupport(true).libNo(2).build();
+//
+//        List<LibraryInfoDto> libraries = Arrays.asList(library1, library2);
+//        /* when */
+//
+//        var result = mapBookService.matchLibraryBooks(libraries, reqMapBookDto);
+//
+//        System.out.println(result);
+//
+//        RespMapBookDto respMapBookDto1 = result.get(0);
+//        RespMapBookDto respMapBookDto2 = result.get(1);
+//
+//        /* then */
+//
+//        assertFalse(respMapBookDto1.isAvailable());
+//        assertTrue(respMapBookDto2.isAvailable());
+//    }
+
     @Test
-    void matchMapBooks_when_bExistConns_isEmpty() {
+    void matchMapBooks_when_bExistConns_non_isEmpty() {
         /* given */
 
-        LibraryInfoDto library1 = LibraryInfoDto.builder().hasBook(true).isHasBookSupport(true).libNo(1).build();
-        LibraryInfoDto library2 = LibraryInfoDto.builder().hasBook(true).isHasBookSupport(true).libNo(2).build();
+        LibraryInfoDto library1 = LibraryInfoDto.builder().hasBook(true).isHasBookSupport(false).libNo(1).build();
+        LibraryInfoDto library2 = LibraryInfoDto.builder().hasBook(false).isHasBookSupport(false).libNo(2).build();
 
-        List<LibraryInfoDto> libraries = Arrays.asList(library1, library2);
-        List<LoanableLibConn> loanableLibConns = Collections.emptyList();
+        List<LibraryInfoDto> libraries = List.of(library1, library2);
 
-        when(connectionGenerator.generateNecessaryConns(libraries,reqMapBookDto)).thenReturn(loanableLibConns);
+        ApiLoanableLibDto apiLoanableLibDto1 = ApiLoanableLibDto.builder().libCode("1").loanAvailable("Y")
+            .build();
+        ApiLoanableLibDto apiLoanableLibDto2 = ApiLoanableLibDto.builder().libCode("2").loanAvailable("Y")
+            .build();
+
+        List<ApiLoanableLibDto> bookExists = List.of(apiLoanableLibDto1, apiLoanableLibDto2);
+
 
         /* when */
 
@@ -68,38 +98,9 @@ class MapBookServiceTest {
 
         /* then */
 
-        assertFalse(result.stream().allMatch(RespMapBookDto::isAvailable));
-    }
+        System.out.println(result);
 
-//    @Test
-//    void matchMapBooks_when_bExistConns_non_isEmpty() {
-//        /* given */
-//
-//        LibraryInfoDto library1 = LibraryInfoDto.builder().hasBook(true).isHasBookSupport(false).libNo(1).build();
-//        LibraryInfoDto library2 = LibraryInfoDto.builder().hasBook(true).isHasBookSupport(false).libNo(2).build();
-//
-//        List<LibraryInfoDto> libraries = List.of(library1, library2);
-//
-//        ApiLoanableLibDto apiLoanableLibDto1 = ApiLoanableLibDto.builder().libCode("1").loanAvailable("Y")
-//            .build();
-//        ApiLoanableLibDto apiLoanableLibDto2 = ApiLoanableLibDto.builder().libCode("2").loanAvailable("Y")
-//            .build();
-//
-//        List<ApiLoanableLibDto> bookExists = List.of(apiLoanableLibDto1, apiLoanableLibDto2);
-//
-//        List<LoanableLibConn> loanableLibConns =
-//
-////        when(loanableLibConns.isEmpty()).thenReturn(false);
-//        when(connectionGenerator.generateNecessaryConns(libraries,reqMapBookDto)).thenReturn(loanableLibConns);
-//        when(dataProvider.provideDataList(loanableLibConns, loanableLibConns.size())).thenReturn(bookExists);
-//
-//        /* when */
-//
-//        var result = mapBookService.matchLibraryBooks(libraries, reqMapBookDto);
-//
-//        /* then */
-//
-//        assertTrue(result.stream().allMatch(RespMapBookDto::isAvailable));
-//    }
+        assertTrue(result.stream().allMatch(RespMapBookDto::isAvailable));
+    }
 
 }
